--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>PurplePen</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+      font {
+        font-family: 'Roboto', 'Roboto Mono', sans-serif;
+      }
     </style>
   </head>
   <body>
